# UD_MLOps_Demo

./: .pre-commit-config.yaml  .pre-commit.conf.yml  Dockerfile  Makefile  requirements.txt
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
mlops_ud/: README.md  pyproject.toml  requirements.txt
mlops_ud/mlops_ud/: main.py  model_ml.py
mlops_ud/tests/: test_main.py
