[tool.poetry]
name = "mlops-ud"
version = "0.1.0"
description = "This is an example of MLOps for a UD workshop"
authors = ["casierrav <cavirguezs@udistrital.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
pylint = "^3.1.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
